Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73994

Changing input method with shortcut key causes hang on WebEngine

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • None
    • 5.12.1, 6.2.2, 6.3.0, 6.4.2, 6.5.0
    • WebEngine
    • Windows
    • 1f853a93a (112-based), 3e900b7a9 (dev), 6698b870a (6.6), c4eaf8dee (108-based), 053835946 (87-based), 27b65023d (134-based-refactor), 02b470ae6 (134-based-refactor)

      To reproduce:

      • Start bar>Search for 'language settings', and ensure there are two available languages
      • Start bar>Search for 'advanced keyboard settings'
      • In subsequent window, click on 'language bar options', then the 'advanced key settings' tab
      • Set up hot keys to switch between the two languages, such as shift+alt+1 and shift+alt+2
      • Run the webengine markdown sample app on a system that supports hardware acceleration (tested on a system with an Nvidia card, and one with Intel graphics)
      • Press the shortcut key for the input method that's not currently enabled, and observe the app has hung.

      Notes:

      • On systems which don't support hardware acceleration, or when QT_OPENGL is set to software, the issue can't be reproduced.
      • A user reported an earlier build with Qt 5.9 doesn't exhibit the issue. Another user's report seems to indicate the issue exists with Qt 5.9 as well.

        For Gerrit Dashboard: QTBUG-73994
        # Subject Branch Project Status CR V

            pvarga Peter Varga
            qtdae2 Damien Elmes
            Votes:
            5 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes